--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,7 +30,7 @@ body {
   cursor: pointer;
   position: relative;
   margin: 1rem auto;
-  width: 75%;
+  width: 90%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -68,7 +68,7 @@ body {
 
 .edit-button {
   position: absolute;
-  bottom: 25px;
+  bottom: 100px;
   right: 25px;
   border: 1px solid grey;
   padding: 5px 10px;
@@ -80,9 +80,30 @@ body {
   color: white;
 }
 
+.delete-button {
+  position: absolute;
+  bottom: 25px;
+  right: 25px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: lightseagreen;
+}
+
+.delete-button:hover {
+  background-color: green;
+  color: white;
+}
+
 .home-button {
   padding: 5px 10px;
   background-color: lightskyblue;
+  margin-top: 10px;
+}
+
+.add-button {
+  padding: 5px 10px;
+  background-color: lightskyblue;
+  margin-top: 10px;
 }
 
 .movie-warning {
